@@ -159,6 +159,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Refactored the way auto copyGroups are handled : now it is evaluated upon each change and stored separately from manually
   selected copyGroups, this way it is possible to add or remove copyGroups automatically depending on the given
   expression.  Automatically added copyGroups are displayed with a [auto] label on the item view
+- Added possibility to force an item to be presented among normal items in a frozen meeting: a checkbox is added under the
+  available items on the meeting view when the meeting is frozen so checking this box will force presented items to be
+  inserted as a normal item
 
 3.3 (2015-02-27)
 ----------------
